# DevicePilotHMI

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md
.github/workflows/: linux-qt-build.yml  windows-qt-build.yml
scripts/: build.ps1  build.sh  package_windows.ps1  setup_windows_qt_env.ps1
src/: main.cpp
src/alarm/: alarm_manager.cpp
src/backend/: machine_backend.cpp  machine_backend.h  simulated_machine_backend.cpp  simulated_machine_backend.h
src/log/: log_filter_proxy_model.cpp
src/runtime/: machine_runtime.cpp  machine_runtime.h  machine_types.h
tests/: CMakeLists.txt  alarm_manager_test.cpp  settings_apply_service_test.cpp  settings_session_test.cpp  test_machine_backend.h
